--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,14 @@
-@charset "utf-8";
+*{
+	transition:all 1.5s;
+}*{
+	transition:all 1.5s;
+}*{
+	transition:all 1.5s;
+}*{
+	transition:all 1.5s;
+}*{
+	transition:all 1.5s;
+}@charset "utf-8";
 /* CSS Document */
 
 
