--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,4 @@
-*{
-	transition:all 1.5s;
-}*{
-	transition:all 1.5s;
-}*{
-	transition:all 1.5s;
-}*{
-	transition:all 1.5s;
-}*{
-	transition:all 1.5s;
-}@charset "utf-8";
+@charset "utf-8";
 /* CSS Document */
 
 
