--- a/css/leftpage.css
+++ b/css/leftpage.css
@@ -1,5 +1,5 @@
 
-a:link,a:hover,a:visited,a:active {  color: #fff;  text-decoration: none;  }
+a:link,a:hover,a:visited,a:active { text-decoration: none;  }
 .all {  position: absolute;  width: 0px;  overflow: visible;  }
 .box {  display: inline-block;  float: right;  clear: both;  }
 .card {
