--- a/css/login.css
+++ b/css/login.css
@@ -79,7 +79,10 @@ input:hover{
 }
 .submit{
 	margin-top:20px;
-	width:180px;
+	margin-right: 30px;
+	width:60%;
+	position: absolute;
+	left: 20%;
 	height:40px;
 	background:#ccc;
 	text-align:center;
@@ -88,9 +91,6 @@ input:hover{
 	border-radius:5px;
 	color:#39BEFF;
 	cursor:pointer;
-	position: absolute;
-	left: 20%;
-    padding: 5px 10px;
 	
 
 	/* border:1px solid #000; */
